--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,7 +5,7 @@
         "blogPage1": "Blog Page 1",
         "products": "Products",
         "AboutUs": "About Us",
-        "process": "Process",
+        "Process": "Process",
         "AboutUs": {
     "title": "About Us",
     "description1": "ESmart Solutions focuses on helping businesses enhance their ability to reach and promote their products to potential customers.",
