--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -5,7 +5,7 @@
   "blogPage1": "Trang Blog 1",
   "products": "Sản phẩm",
   "AboutUs": "Về Chúng Tôi",
-  "process": "Quy trình",
+  "Process": "Quy trình",
   "AboutUs": {
     "title": "Về Chúng Tôi",
     "description1": "ESmart Solutions - tập trung hỗ trợ các doanh nghiệp kinh doanh tăng cường khả năng tiếp cận và quảng bá sản phẩm đến khách hàng tiềm năng.",
