Updated the scrolling banner and fix some small bugs

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -189,6 +189,8 @@
     "instagram": "Engaging content on Instagram",
     "linkedin": "Professional connections on LinkedIn",
     "tiktok": "Create trending content on TikTok",
+    "whatsapp": "Connect with us through WhatsApp",
+    "snapchat": "See what we are doing through SnapChat",
     "testimonial1": {
       "name": "Le Khanh Linh - Comprehensive Partner",
       "title": "Founder of Green Fashion Brand My",
