create login page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,6 +6,7 @@
         "products": "Products",
         "AboutUs": "About Us",
         "Process": "Process",
+        "signIn": "Sign In",
         "AboutUs": {
     "title": "About Us",
     "description1": "ESmart Solutions focuses on helping businesses enhance their ability to reach and promote their products to potential customers.",
