--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -6,6 +6,7 @@
   "products": "Sản phẩm",
   "AboutUs": "Về Chúng Tôi",
   "Process": "Quy trình",
+  "signIn": "Đăng nhập",
   "AboutUs": {
     "title": "Về Chúng Tôi",
     "description1": "ESmart Solutions - tập trung hỗ trợ các doanh nghiệp kinh doanh tăng cường khả năng tiếp cận và quảng bá sản phẩm đến khách hàng tiềm năng.",
