--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,12 +1,13 @@
 {
-        "home": "Home",
-        "achievements": "Achievements",
-        "blog": "Blog",
-        "blogPage1": "Blog Page 1",
-        "products": "Products",
-        "AboutUs": "About Us",
-        "Process": "Process",
-        "AboutUs": {
+  "home": "Home",
+  "aiCreator": "AI Creator",
+  "achievements": "Achievements",
+  "blog": "Blog",
+  "blogPage1": "Blog Page 1",
+  "products": "Products",
+  "AboutUs": "About Us",
+  "Process": "Process",
+  "AboutUs": {
     "title": "About Us",
     "description1": "ESmart Solutions focuses on helping businesses enhance their ability to reach and promote their products to potential customers.",
     "description2": "With the motto Respect - Efficiency - Professionalism, our partners will be regularly updated with information, care, and ensured rights from the smallest terms.",
@@ -16,7 +17,7 @@
     "mainPost": {
       "title": "ECO TOUCH - A NEW JOURNEY OF VIET STRAW TO GO GLOBAL",
       "excerpt": "Joining forces with EcoSmart Solutions, ECO Touch embarks on an exhilarating journey alongside VietStraw...",
-      "fullText": "Joining forces with EcoSmart Solutions, ECO Touch embarks on an exhilarating journey alongside VietStraw. As we embark on this exhilarating journey, ECO Touch and EcoSmart Solutions are poised to revolutionize the landscape of sustainable practices. Our partnership is built on a foundation of mutual respect and a commitment to advancing environmental solutions. With EcoSmart Solutions' expertise in cutting-edge green technologies and ECO Touch’s pioneering approach to eco-friendly products, we are set to make a significant impact."
+      "fullText": "Joining forces with EcoSmart Solutions, ECO Touch embarks on an exhilarating journey alongside VietStraw. As we embark on this exhilarating journey, ECO Touch and EcoSmart Solutions are poised to revolutionize the landscape of sustainable practices. Our partnership is built on a foundation of mutual respect and a commitment to advancing environmental solutions. With EcoSmart Solutions' expertise in cutting-edge green technologies and ECO Touch's pioneering approach to eco-friendly products, we are set to make a significant impact."
     },
     "readMore": "Read More",
     "readLess": "Read Less",
@@ -91,22 +92,32 @@
       {
         "title": "Step 2: Contract Signing",
         "subsSteps": [
-          { "title": "Sign the contract with the appropriate service package, ensuring all terms are transparent and clear." }
+          {
+            "title": "Sign the contract with the appropriate service package, ensuring all terms are transparent and clear."
+          }
         ]
       },
       {
         "title": "Step 3: Service Implementation",
         "subsSteps": [
           { "title": "Create a team for communication and work supervision." },
-          { "title": "Develop monthly content plans, present to customers for approval." },
-          { "title": "Design images, produce videos, and implement advertising campaigns." }
+          {
+            "title": "Develop monthly content plans, present to customers for approval."
+          },
+          {
+            "title": "Design images, produce videos, and implement advertising campaigns."
+          }
         ]
       },
       {
         "title": "Step 4: Reporting and Evaluation",
         "subsSteps": [
-          { "title": "Report results at the end of the month, make necessary adjustments." },
-          { "title": "Collect customer feedback, support customers during use." }
+          {
+            "title": "Report results at the end of the month, make necessary adjustments."
+          },
+          {
+            "title": "Collect customer feedback, support customers during use."
+          }
         ]
       }
     ],
@@ -238,6 +249,109 @@
         "title": "Built on 2 Years of Experience",
         "description": "Esmart Solutions is built on a foundation in the field of advertising and omnichannel digital marketing management."
       }
+    }
+  },
+  "creatorAI": {
+    "dashboard": {
+      "title": "Dashboard",
+      "noProjects": "No projects found. Click \"Create New Content\" to get started.",
+      "loading": "Loading projects...",
+      "inProgress": "In Progress",
+      "finished": "Finished",
+      "noDescription": "No description",
+      "deleteConfirm": "Are you sure you want to delete this project?",
+      "deleteSuccess": "Project deleted successfully",
+      "deleteFailed": "Failed to delete project",
+      "deleteError": "An error occurred while deleting the project",
+      "backToHome": "Back to Home",
+      "createNew": "Create New Content"
+    },
+    "requirements": {
+      "title": "Content Requirements",
+      "projectTitle": "Project Title",
+      "projectDescription": "Project Description",
+      "contentType": "Content Type",
+      "topic": "Content Topic",
+      "keywords": "Target Keywords",
+      "tone": "Content Tone",
+      "blog": "Blog Post",
+      "article": "Article",
+      "productDescription": "Product Description",
+      "socialMedia": "Social Media Post",
+      "emailNewsletter": "Email Newsletter",
+      "professional": "Professional",
+      "casual": "Casual",
+      "formal": "Formal",
+      "friendly": "Friendly",
+      "persuasive": "Persuasive",
+      "optimistic": "Optimistic",
+      "keywordsTip": "Enter keywords separated by commas",
+      "previous": "Previous",
+      "next": "Next",
+      "analyzing": "Analyzing SEO potential...",
+      "requiredFields": "Please fill in all required fields"
+    },
+    "editor": {
+      "title": "Content Editor",
+      "readabilityScore": "Readability Score",
+      "contentLength": "Content Length",
+      "words": "words",
+      "save": "Save",
+      "saveSuccess": "Content saved successfully!",
+      "saving": "Saving...",
+      "previous": "Previous",
+      "next": "Next",
+      "seoAnalyzing": "Analyzing SEO metrics...",
+      "keywordsTitle": "Suggested Keywords",
+      "backToDashboard": "Back to Dashboard"
+    },
+    "image": {
+      "title": "Generate AI Image",
+      "styleTitle": "Choose Style",
+      "promptTitle": "Image Description",
+      "generateButton": "Generate Image",
+      "regenerateButton": "Regenerate Image",
+      "generating": "Generating image...",
+      "previous": "Previous",
+      "next": "Next",
+      "saveImage": "Save Image",
+      "generatePrompt": "Generate prompt",
+      "generatingPrompt": "Generating prompt...",
+      "promptGeneratedSuccess": "Prompt generated successfully!",
+      "promptGeneratedError": "Error generating prompt",
+      "generationMethod": "Generation Method",
+      "fromTopic": "From Topic",
+      "customPrompt": "Custom Prompt",
+      "customPromptLabel": "Custom Prompt",
+      "promptPlaceholder": "Describe the image you want to generate...",
+      "styles": {
+        "realistic": "Realistic",
+        "threeD": "3D",
+        "minimalist": "Minimalist",
+        "watercolor": "Watercolor",
+        "flatVector": "Flat Vector"
+      }
+    },
+    "final": {
+      "title": "Final Result",
+      "editImage": "Edit Image",
+      "generateImage": "Generate Image",
+      "createNew": "Create New Content",
+      "backToDashboard": "Back to Dashboard",
+      "export": "Export",
+      "share": "Share",
+      "downloadPDF": "Download PDF",
+      "contentSection": "Content",
+      "imageSection": "Image",
+      "projectDetails": "Project Details",
+      "exportSuccess": "Content exported successfully!",
+      "shareSuccess": "Content shared successfully!",
+      "downloadStart": "Your download will start shortly..."
+    },
+    "common": {
+      "loading": "Loading content data...",
+      "error": "Error loading data",
+      "returnToDashboard": "Return to Dashboard"
     }
   }
 }
