Finalize Esmart Creator AI

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -288,7 +288,7 @@
       "keywordsTip": "Enter keywords separated by commas",
       "previous": "Previous",
       "next": "Next",
-      "analyzing": "Analyzing SEO potential...",
+      "analyzing": "Analyzing...",
       "requiredFields": "Please fill in all required fields"
     },
     "editor": {
