Update: Marketing assessment questions and UI

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,13 +1,14 @@
 {
-        "home": "Home",
-        "achievements": "Achievements",
-        "blog": "Blog",
-        "blogPage1": "Blog Page 1",
-        "products": "Products",
-        "AboutUs": "About Us",
-        "Process": "Process",
-        "signIn": "Sign In",
-        "AboutUs": {
+  "home": "Home",
+  "assessment": "Assessment",
+  "achievements": "Achievements",
+  "blog": "Blog",
+  "blogPage1": "Blog Page 1",
+  "products": "Products",
+  "AboutUs": "About Us",
+  "Process": "Process",
+  "signIn": "Sign In",
+  "AboutUs": {
     "title": "About Us",
     "description1": "ESmart Solutions focuses on helping businesses enhance their ability to reach and promote their products to potential customers.",
     "description2": "With the motto Respect - Efficiency - Professionalism, our partners will be regularly updated with information, care, and ensured rights from the smallest terms.",
@@ -41,7 +42,6 @@
       "button": "Chat with Support Team"
     }
   },
-
   "process": {
     "title": "Our Process",
     "closeButton": "Close",
@@ -77,37 +77,54 @@
       }
     }
   },
-
   "process": {
     "title": "Our Process",
     "steps": [
       {
         "title": "Step 1: Consultation and Planning",
         "subsSteps": [
-          { "title": "Market analysis - target customers." },
-          { "title": "Build customer insight" },
-          { "title": "Plan implementation monthly, with clear goals." }
+          {
+            "title": "Market analysis - target customers."
+          },
+          {
+            "title": "Build customer insight"
+          },
+          {
+            "title": "Plan implementation monthly, with clear goals."
+          }
         ]
       },
       {
         "title": "Step 2: Contract Signing",
         "subsSteps": [
-          { "title": "Sign the contract with the appropriate service package, ensuring all terms are transparent and clear." }
+          {
+            "title": "Sign the contract with the appropriate service package, ensuring all terms are transparent and clear."
+          }
         ]
       },
       {
         "title": "Step 3: Service Implementation",
         "subsSteps": [
-          { "title": "Create a team for communication and work supervision." },
-          { "title": "Develop monthly content plans, present to customers for approval." },
-          { "title": "Design images, produce videos, and implement advertising campaigns." }
+          {
+            "title": "Create a team for communication and work supervision."
+          },
+          {
+            "title": "Develop monthly content plans, present to customers for approval."
+          },
+          {
+            "title": "Design images, produce videos, and implement advertising campaigns."
+          }
         ]
       },
       {
         "title": "Step 4: Reporting and Evaluation",
         "subsSteps": [
-          { "title": "Report results at the end of the month, make necessary adjustments." },
-          { "title": "Collect customer feedback, support customers during use." }
+          {
+            "title": "Report results at the end of the month, make necessary adjustments."
+          },
+          {
+            "title": "Collect customer feedback, support customers during use."
+          }
         ]
       }
     ],
@@ -169,7 +186,6 @@
       "contact": "Contact Us"
     }
   },
-
   "feats": {
     "sectionTitle": "Website Development",
     "mainTitle": "Experience the Special Features with Esmart",
@@ -181,7 +197,6 @@
       "4": "Unlimited Color Options"
     }
   },
-
   "socialProof": {
     "mediaTitle": "Social Media",
     "testimonialsTitle": "What our customers say about us",
@@ -240,5 +255,173 @@
         "description": "Esmart Solutions is built on a foundation in the field of advertising and omnichannel digital marketing management."
       }
     }
+  },
+  "MarketingAssessment": {
+    "title": "Marketing Assessment",
+    "progressText": "{completed} of {total} questions",
+    "progressPercentage": "{percentage}%",
+    "questionNumber": "Question {number}",
+    "submitButton": "Submit Assessment",
+    "nextButton": "Next",
+    "prevButton": "Previous",
+    "alert": "Please answer the current question before proceeding",
+    "results": {
+      "scoreTitle": "Your Score",
+      "strengthsTitle": "Strengths",
+      "weaknessesTitle": "Areas to Improve",
+      "suggestionsTitle": "Recommendations"
+    },
+    "questions": [
+      {
+        "id": 1,
+        "question": "Does your website have unique meta titles and descriptions for each page?",
+        "answers": [
+          {
+            "text": "Yes"
+          },
+          {
+            "text": "Some pages"
+          },
+          {
+            "text": "No"
+          }
+        ]
+      },
+      {
+        "id": 2,
+        "question": "Is your website optimized for mobile devices?",
+        "answers": [
+          {
+            "text": "Yes"
+          },
+          {
+            "text": "Partially"
+          },
+          {
+            "text": "No"
+          }
+        ]
+      },
+      {
+        "id": 3,
+        "question": "Do you perform keyword research to target SEO-friendly keywords?",
+        "answers": [
+          {
+            "text": "Regularly"
+          },
+          {
+            "text": "Occasionally"
+          },
+          {
+            "text": "Never"
+          }
+        ]
+      },
+      {
+        "id": 4,
+        "question": "Does your site load within 3 seconds?",
+        "answers": [
+          {
+            "text": "Always"
+          },
+          {
+            "text": "Sometimes"
+          },
+          {
+            "text": "No"
+          }
+        ]
+      },
+      {
+        "id": 5,
+        "question": "Are image files optimized (compressed, with alt tags)?",
+        "answers": [
+          {
+            "text": "Yes"
+          },
+          {
+            "text": "Some"
+          },
+          {
+            "text": "No"
+          }
+        ]
+      },
+      {
+        "id": 6,
+        "question": "Do you have quality backlinks from other websites?",
+        "answers": [
+          {
+            "text": "20+ backlinks"
+          },
+          {
+            "text": "5-20 backlinks"
+          },
+          {
+            "text": "Few or none"
+          }
+        ]
+      },
+      {
+        "id": 7,
+        "question": "How often do you publish new content?",
+        "answers": [
+          {
+            "text": "Weekly+"
+          },
+          {
+            "text": "Monthly"
+          },
+          {
+            "text": "Rarely/Never"
+          }
+        ]
+      },
+      {
+        "id": 8,
+        "question": "Do you track SEO performance (e.g., via Google Search Console or Google Analytics)?",
+        "answers": [
+          {
+            "text": "Regular reports"
+          },
+          {
+            "text": "Rarely check"
+          },
+          {
+            "text": "Not using"
+          }
+        ]
+      },
+      {
+        "id": 9,
+        "question": "Do your URLs contain clear keywords (SEO-friendly URLs)?",
+        "answers": [
+          {
+            "text": "Always"
+          },
+          {
+            "text": "Sometimes"
+          },
+          {
+            "text": "No"
+          }
+        ]
+      },
+      {
+        "id": 10,
+        "question": "Is your website SSL secured (HTTPS)?",
+        "answers": [
+          {
+            "text": "Yes"
+          },
+          {
+            "text": "No"
+          },
+          {
+            "text": "Not sure"
+          }
+        ]
+      }
+    ]
   }
 }
