--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -1,5 +1,6 @@
 {
   "home": "Trang chủ",
+  "assessment": "Đánh giá",
   "achievements": "Thành tựu",
   "blog": "Blog",
   "blogPage1": "Trang Blog 1",
@@ -47,30 +48,48 @@
       {
         "title": "Bước 1: Tư vấn và lập kế hoạch",
         "subsSteps": [
-          { "title": "Phân tích thị trường - khách hàng mục tiêu." },
-          { "title": "Xây dựng customer insight" },
-          { "title": "Lên kế hoạch triển khai theo tháng, có mục tiêu rõ ràng." }
+          {
+            "title": "Phân tích thị trường - khách hàng mục tiêu."
+          },
+          {
+            "title": "Xây dựng customer insight"
+          },
+          {
+            "title": "Lên kế hoạch triển khai theo tháng, có mục tiêu rõ ràng."
+          }
         ]
       },
       {
         "title": "Bước 2: Ký kết hợp đồng",
         "subsSteps": [
-          { "title": "Ký hợp đồng với gói dịch vụ phù hợp, đảm bảo điều khoản đều minh bạch, rõ ràng." }
+          {
+            "title": "Ký hợp đồng với gói dịch vụ phù hợp, đảm bảo điều khoản đều minh bạch, rõ ràng."
+          }
         ]
       },
       {
         "title": "Bước 3: Triển khai Dịch vụ",
         "subsSteps": [
-          { "title": "Tạo nhóm trao đổi và giám sát công việc." },
-          { "title": "Lên kế hoạch nội dung hàng tháng, trình khách hàng phê duyệt." },
-          { "title": "Thiết kế hình ảnh, sản xuất video, triển khai các chiến dịch quảng cáo." }
+          {
+            "title": "Tạo nhóm trao đổi và giám sát công việc."
+          },
+          {
+            "title": "Lên kế hoạch nội dung hàng tháng, trình khách hàng phê duyệt."
+          },
+          {
+            "title": "Thiết kế hình ảnh, sản xuất video, triển khai các chiến dịch quảng cáo."
+          }
         ]
       },
       {
         "title": "Bước 4: Báo cáo và đánh giá",
         "subsSteps": [
-          { "title": "Báo cáo kết quả cuối tháng, đưa ra điều chỉnh cần thiết." },
-          { "title": "Thu thập phản hồi khách hàng, hỗ trợ khách hàng trong quá trình sử dụng." }
+          {
+            "title": "Báo cáo kết quả cuối tháng, đưa ra điều chỉnh cần thiết."
+          },
+          {
+            "title": "Thu thập phản hồi khách hàng, hỗ trợ khách hàng trong quá trình sử dụng."
+          }
         ]
       }
     ],
@@ -234,5 +253,173 @@
         "description": "Esmart Solutions được xây dựng trên nền tảng trong lĩnh vực quảng cáo và quản lý truyền thông số kênh."
       }
     }
+  },
+  "MarketingAssessment": {
+    "title": "Đánh Giá Marketing",
+    "progressText": "{completed} trên {total} câu hỏi",
+    "progressPercentage": "{percentage}%",
+    "questionNumber": "Câu hỏi {number}",
+    "submitButton": "Gửi bài đánh giá",
+    "nextButton": "Tiếp theo",
+    "prevButton": "Trước đó",
+    "alert": "Vui lòng trả lời câu hỏi hiện tại trước khi tiếp tục",
+    "results": {
+      "scoreTitle": "Điểm số của bạn",
+      "strengthsTitle": "Điểm mạnh",
+      "weaknessesTitle": "Điểm cần cải thiện",
+      "suggestionsTitle": "Khuyến nghị"
+    },
+    "questions": [
+      {
+        "id": 1,
+        "question": "Trang web của bạn có tiêu đề và mô tả meta riêng cho từng trang không?",
+        "answers": [
+          {
+            "text": "Có"
+          },
+          {
+            "text": "Một số trang"
+          },
+          {
+            "text": "Không"
+          }
+        ]
+      },
+      {
+        "id": 2,
+        "question": "Trang web của bạn có được tối ưu hóa cho thiết bị di động không?",
+        "answers": [
+          {
+            "text": "Có"
+          },
+          {
+            "text": "Một phần"
+          },
+          {
+            "text": "Không"
+          }
+        ]
+      },
+      {
+        "id": 3,
+        "question": "Bạn có thực hiện nghiên cứu từ khóa để nhắm mục tiêu SEO không?",
+        "answers": [
+          {
+            "text": "Thường xuyên"
+          },
+          {
+            "text": "Thỉnh thoảng"
+          },
+          {
+            "text": "Không bao giờ"
+          }
+        ]
+      },
+      {
+        "id": 4,
+        "question": "Trang web của bạn có tải trong vòng 3 giây không?",
+        "answers": [
+          {
+            "text": "Luôn luôn"
+          },
+          {
+            "text": "Thỉnh thoảng"
+          },
+          {
+            "text": "Không"
+          }
+        ]
+      },
+      {
+        "id": 5,
+        "question": "Các tệp hình ảnh có được tối ưu hóa (nén, có thẻ alt) không?",
+        "answers": [
+          {
+            "text": "Có"
+          },
+          {
+            "text": "Một số"
+          },
+          {
+            "text": "Không"
+          }
+        ]
+      },
+      {
+        "id": 6,
+        "question": "Bạn có liên kết ngược (backlink) chất lượng từ các trang web khác không?",
+        "answers": [
+          {
+            "text": "Hơn 20 liên kết"
+          },
+          {
+            "text": "5-20 liên kết"
+          },
+          {
+            "text": "Ít hoặc không có"
+          }
+        ]
+      },
+      {
+        "id": 7,
+        "question": "Bạn đăng nội dung mới thường xuyên như thế nào?",
+        "answers": [
+          {
+            "text": "Hàng tuần trở lên"
+          },
+          {
+            "text": "Hàng tháng"
+          },
+          {
+            "text": "Hiếm khi/Không bao giờ"
+          }
+        ]
+      },
+      {
+        "id": 8,
+        "question": "Bạn có theo dõi hiệu suất SEO (ví dụ: qua Google Search Console hoặc Google Analytics) không?",
+        "answers": [
+          {
+            "text": "Báo cáo định kỳ"
+          },
+          {
+            "text": "Hiếm khi xem"
+          },
+          {
+            "text": "Không sử dụng"
+          }
+        ]
+      },
+      {
+        "id": 9,
+        "question": "URL của bạn có chứa từ khóa rõ ràng (thân thiện với SEO) không?",
+        "answers": [
+          {
+            "text": "Luôn luôn"
+          },
+          {
+            "text": "Thỉnh thoảng"
+          },
+          {
+            "text": "Không"
+          }
+        ]
+      },
+      {
+        "id": 10,
+        "question": "Trang web của bạn có bảo mật SSL (HTTPS) không?",
+        "answers": [
+          {
+            "text": "Có"
+          },
+          {
+            "text": "Không"
+          },
+          {
+            "text": "Không chắc"
+          }
+        ]
+      }
+    ]
   }
 }
