update our process

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -43,7 +43,7 @@
       "button": "Chat with Support Team"
     }
   },
-  "process": {
+  "processStep": {
     "title": "Our Process",
     "closeButton": "Close",
     "steps": {
