--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -25,7 +25,27 @@
     "achievements": "Achievements",
     "achievementsSubtitle": "Outstanding achievements and services of ESmart Solutions",
     "whatCustomersSay": "What Our Customers Say",
-    "whatCustomersSaySubtitle": "Positive feedback from our customers"
+    "whatCustomersSaySubtitle": "Positive feedback from our customers",
+    "workProcess": "Work Process",
+    "workProcessSubtitle": "Professional working methods of ESmart Solutions",
+    "processBenefits": "Process Benefits",
+    "processBenefitsSubtitle": "Outstanding advantages when working with ESmart Solutions",
+    "socialProof": "Social Proof",
+    "socialProofSubtitle": "Trusted partners who have chosen ESmart Solutions",
+    "marketingAssessment": "Marketing Assessment",
+    "marketingAssessmentSubtitle": "Comprehensive marketing evaluation and optimization",
+    "features": "Features",
+    "featuresSubtitle": "Advanced technology solutions for sustainable business development",
+    "testimonials": "Testimonials",
+    "testimonialsSubtitle": "What our customers say about us",
+    "projects": "Projects",
+    "projectsSubtitle": "Outstanding projects and achievements",
+    "aboutUs": "About Us",
+    "aboutUsSubtitle": "Learn more about ESmart Solutions",
+    "questions": "Frequently Asked Questions",
+    "questionsSubtitle": "Common questions and answers",
+    "contact": "Contact",
+    "contactSubtitle": "Get in touch with our team"
   },
   "companyValues": {
     "respect": "Respect",
