--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -25,7 +25,27 @@
     "achievements": "Thành Tựu Nổi Bật",
     "achievementsSubtitle": "Những thành tựu và dịch vụ nổi bật của ESmart Solutions",
     "whatCustomersSay": "Khách Hàng Nói Gì",
-    "whatCustomersSaySubtitle": "Những phản hồi tích cực từ khách hàng của chúng tôi"
+    "whatCustomersSaySubtitle": "Những phản hồi tích cực từ khách hàng của chúng tôi",
+    "workProcess": "Quy Trình Làm Việc",
+    "workProcessSubtitle": "Phương pháp làm việc chuyên nghiệp của ESmart Solutions",
+    "processBenefits": "Lợi Ích Của Quy Trình",
+    "processBenefitsSubtitle": "Những ưu điểm vượt trội khi làm việc với ESmart Solutions",
+    "socialProof": "Bằng Chứng Xã Hội",
+    "socialProofSubtitle": "Những đối tác tin tưởng đã chọn ESmart Solutions",
+    "marketingAssessment": "Đánh Giá Marketing",
+    "marketingAssessmentSubtitle": "Đánh giá và tối ưu hóa marketing toàn diện",
+    "features": "Tính Năng",
+    "featuresSubtitle": "Những giải pháp công nghệ tiên tiến giúp doanh nghiệp phát triển bền vững",
+    "testimonials": "Đánh Giá",
+    "testimonialsSubtitle": "Khách hàng nói gì về chúng tôi",
+    "projects": "Dự Án",
+    "projectsSubtitle": "Những dự án và thành tựu nổi bật",
+    "aboutUs": "Về Chúng Tôi",
+    "aboutUsSubtitle": "Tìm hiểu thêm về ESmart Solutions",
+    "questions": "Câu Hỏi Thường Gặp",
+    "questionsSubtitle": "Những câu hỏi và câu trả lời phổ biến",
+    "contact": "Liên Hệ",
+    "contactSubtitle": "Liên hệ với đội ngũ của chúng tôi"
   },
   "companyValues": {
     "respect": "Tôn Trọng",
