chore: commit latest UI and i18n updates (navbar, footer, social proof, marketing assessment, about us, locales)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,7 @@
 {
   "navigation": {
     "home": "Home",
+    "services": "Services",
     "aboutUs": "About Us",
     "process": "Process",
     "contact": "Contact",
