--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -1,6 +1,7 @@
 {
   "navigation": {
     "home": "Trang chủ",
+    "services": "Dịch vụ",
     "aboutUs": "Về Chúng Tôi",
     "process": "Quy trình",
     "contact": "Liên hệ",
